--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,14 @@
 amqp==2.2.2
+asn1crypto==0.24.0
 Babel==2.5.3
 beautifulsoup4==4.6.0
 billiard==3.5.0.3
 bs4==0.0.1
 celery==4.1.0
 certifi==2018.1.18
+cffi==1.11.4
 chardet==3.0.4
+cryptography==2.1.4
 Django==2.0.1
 django-celery-beat==1.1.0
 django-celery-results==1.0.1
@@ -19,8 +22,12 @@ greenlet==0.4.12
 idna==2.6
 kombu==4.1.0
 mysqlclient==1.3.12
+ndg-httpsclient==0.4.4
 nltk==3.2.5
+pyasn1==0.4.2
+pycparser==2.18
 pycurl==7.43.0.1
+pyOpenSSL==17.5.0
 pytz==2017.3
 redis==2.10.6
 requests==2.18.4
